buildscript {
    ext {
        springBootVersion = '2.1.0.RELEASE'
        kotlinVersion = '1.3'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
    }
}

plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.3.0'
    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.0'
    id 'org.jetbrains.kotlin.plugin.allopen' version '1.3.0'
}

apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'kotlin'
apply plugin: 'kotlin-spring'
apply plugin: 'jacoco'

ext {
    versions = [
            spock: '1.0-groovy-2.4'
    ]
}

group = 'io.github.przbetkier'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

configurations {
    compile.exclude module: "spring-boot-starter-tomcat"
}

dependencies {
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow', version: "${springBootVersion}"
    compile 'com.squareup.okhttp3:okhttp:3.11.0'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: "${springBootVersion}"
    compile 'org.springframework.boot:spring-boot-starter-webflux'
    compile group: 'io.projectreactor', name: 'reactor-core', version: '3.2.0.RELEASE'
    compile group: 'io.projectreactor.addons', name: 'reactor-extra', version: '3.2.0.RELEASE'

    // kotlin
    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
    compile("org.jetbrains.kotlin:kotlin-reflect")

    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version: "${springBootVersion}"

    testCompile('org.springframework.boot:spring-boot-starter-test')
    testCompile group: 'org.spockframework', name: 'spock-core', version: "$versions.spock"
    testCompile group: 'org.spockframework', name: 'spock-spring', version: "$versions.spock"
    testCompile group: 'cglib', name: 'cglib-nodep', version: '3.2.5'
    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.8.0'
    testCompile group: "de.flapdoodle.embed", name: "de.flapdoodle.embed.mongo", version: "2.1.1"
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled false
    }
}

test {
    if (System.properties['test.profile'] != 'integration') {
        exclude '**/*integration*'
    } else {
        exclude '**/*io/*'
    }

check.dependsOn jacocoTestReport
}